# chocolate-doom

./: .gitignore  .nvimrc  .oclint  .vimrc  .ycm_extra_conf.py  CMakeLists.txt  Makefile.am  README.md  TODO.md  build.sh  configure.ac  lint.sh  test.sh  trace_nodes.md  trace_notes.md
Chocolate Doom/Chocolate Doom.xcodeproj/: project.pbxproj
Chocolate Doom/Chocolate Doom.xcodeproj/xcuserdata/alistair.xcuserdatad/xcschemes/: Chocolate Doom.xcscheme  xcschememanagement.plist
autom4te.cache/: output.0  requests  traces.0
choc.xcworkspace/: contents.xcworkspacedata
choc.xcworkspace/xcuserdata/alistair.xcuserdatad/: UserInterfaceState.xcuserstate
pkg/: Makefile.am
pkg/osx/: AppController.m  GNUmakefile  IWADController.h  IWADController.m  Info.plist.in
pkg/osx/Resources/launcher.nib/: designable.nib
src/: .ycm_extra_conf.py  Makefile.am  aes_prng.c  d_iwad.c  d_loop.c  d_loop.h  d_mode.c  d_mode.h  deh_main.c  deh_main.h  deh_str.c  deh_str.h  doomtype.h  gusconf.c  gusconf.h  i_input.c  i_joystick.c  i_main.c  i_sdlmusic.c  i_sdlsound.c  i_sound.c  i_sound.h  i_system.c  i_timer.c  i_video.c  i_video.h  i_videohr.c  i_videohr.h  m_argv.c  m_config.c  m_config.h  m_fixed.c  m_misc.c  m_misc.h  midifile.c  mus2mid.c  mus2mid.h  net_client.c  net_client.h  net_common.c  (+21 more)
src/doom/: .ycm_extra_conf.py  Makefile.am  am_map.c  am_map.h  d_englsh.h  d_main.c  d_main.h  d_net.c  d_player.h  deh_bexstr.c  doomdef.h  doomstat.c  doomstat.h  dstrings.h  f_wipe.c  g_game.c  g_game.h  hu_lib.c  hu_lib.h  hu_stuff.c  hu_stuff.h  info.c  m_menu.c  m_menu.h  p_ceilng.c  p_doors.c  p_enemy.c  p_floor.c  p_inter.c  p_inter.h  p_lights.c  p_map.c  p_maputl.c  p_mobj.c  p_plats.c  p_pspr.c  p_pspr.h  p_saveg.c  p_saveg.h  p_setup.c  (+34 more)
src/setup/: .ycm_extra_conf.py  Makefile.am  display.c  mainmenu.c
